mecannum/build/tmp/compileFrcUserProgramLinuxathenaDebugExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/FRC%20Team%204903/3D%20Objects/Documents/vscodeprojects/DeepSpace/mecannum/build/tmp/compileFrcUserProgramLinuxathenaDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramLinuxathenaDebugExecutableFrcUserProgramCpp.
compiling Robot.cpp failed.
C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\src\main\cpp\Robot.cpp: In constructor 'Robot::Robot()':
C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\src\main\cpp\Robot.cpp:147:9: error: 'table' was not declared in this scope
         table->GetEntry("Vision");
         ^~~~~
In file included from C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\build\tmp\expandedArchives\wpilibc-cpp-2019.1.1-headers.zip_bbc5901b0e22ac527e7d642f2ec68009/frc/IterativeRobotBase.h:10:0,
                 from C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\build\tmp\expandedArchives\wpilibc-cpp-2019.1.1-headers.zip_bbc5901b0e22ac527e7d642f2ec68009/frc/TimedRobot.h:13,
                 from C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\src\main\cpp\Robot.cpp:5:
C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\src\main\cpp\Robot.cpp: In function 'int main()':
C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\build\tmp\expandedArchives\wpilibc-cpp-2019.1.1-headers.zip_bbc5901b0e22ac527e7d642f2ec68009/frc/RobotBase.h:39:23: warning: 'int StartRobotClassImpl()' is deprecated: Call frc::StartRobot<Robot>() in your own main() instead of using the START_ROBOT_CLASS(Robot) macro. [-Wdeprecated-declarations]
   int main() { return StartRobotClassImpl(); }
                       ^
C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\src\main\cpp\Robot.cpp:583:1: note: in expansion of macro 'START_ROBOT_CLASS'
 START_ROBOT_CLASS(Robot)
 ^~~~~~~~~~~~~~~~~
C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\build\tmp\expandedArchives\wpilibc-cpp-2019.1.1-headers.zip_bbc5901b0e22ac527e7d642f2ec68009/frc/RobotBase.h:38:7: note: declared here
   int StartRobotClassImpl() { return frc::StartRobot<_ClassName_>(); } \
       ^
C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\src\main\cpp\Robot.cpp:583:1: note: in expansion of macro 'START_ROBOT_CLASS'
 START_ROBOT_CLASS(Robot)
 ^~~~~~~~~~~~~~~~~
C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\build\tmp\expandedArchives\wpilibc-cpp-2019.1.1-headers.zip_bbc5901b0e22ac527e7d642f2ec68009/frc/RobotBase.h:39:43: warning: 'int StartRobotClassImpl()' is deprecated: Call frc::StartRobot<Robot>() in your own main() instead of using the START_ROBOT_CLASS(Robot) macro. [-Wdeprecated-declarations]
   int main() { return StartRobotClassImpl(); }
                                           ^
C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\src\main\cpp\Robot.cpp:583:1: note: in expansion of macro 'START_ROBOT_CLASS'
 START_ROBOT_CLASS(Robot)
 ^~~~~~~~~~~~~~~~~
C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\build\tmp\expandedArchives\wpilibc-cpp-2019.1.1-headers.zip_bbc5901b0e22ac527e7d642f2ec68009/frc/RobotBase.h:38:7: note: declared here
   int StartRobotClassImpl() { return frc::StartRobot<_ClassName_>(); } \
       ^
C:\Users\FRC Team 4903\3D Objects\Documents\vscodeprojects\DeepSpace\mecannum\src\main\cpp\Robot.cpp:583:1: note: in expansion of macro 'START_ROBOT_CLASS'
 START_ROBOT_CLASS(Robot)
 ^~~~~~~~~~~~~~~~~

Finished compileFrcUserProgramLinuxathenaDebugExecutableFrcUserProgramCpp, see full log file:///C:/Users/FRC%20Team%204903/3D%20Objects/Documents/vscodeprojects/DeepSpace/mecannum/build/tmp/compileFrcUserProgramLinuxathenaDebugExecutableFrcUserProgramCpp/output.txt.
